kubernetes/apps/system-upgrade/tuppr/app/networkpolicies.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
# Allow all pods in this namespace to resolve DNS via kube-dns
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tuppr-allow-dns
  namespace: system-upgrade
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: tuppr
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
# Allow all pods in this namespace to reach the Kubernetes API server
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tuppr-allow-k8s-api
  namespace: system-upgrade
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: tuppr
  egress:
    - toServices:
      - k8sService:
          serviceName: kubernetes
          namespace: default
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
# Allow Tuppr egress to Talos API on nodes (port 50000) for OS upgrades
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tuppr-allow-talos-api
  namespace: system-upgrade
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: tuppr
  egress:
    - toCIDR:
        - 192.168.1.0/24
      toPorts:
        - ports:
            - port: "50000"
              protocol: TCP
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
# Allow Prometheus to scrape Tuppr metrics (port 8081)
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tuppr-allow-prometheus-scrape
  namespace: system-upgrade
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: tuppr
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: observability
      toPorts:
        - ports:
            - port: "8081"
              protocol: TCP
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
# Allow kube-apiserver to reach Tuppr validating webhook (port 9443)
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tuppr-allow-webhook
  namespace: system-upgrade
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: tuppr
  ingress:
    - fromEntities:
        - kube-apiserver
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "9443"
              protocol: TCP
